PROJECT (xsocket)
cmake_minimum_required(VERSION 2.8)
SET(SRC_DIR ./)

SET(SRC_LIST 
    ${SRC_DIR}/xsocket.c
)
INCLUDE_DIRECTORIES(${SRC_DIR})
IF(APPLE)
set(CMAKE_SHARED_LINKER_FLAGS "-undefined dynamic_lookup")
ENDIF(APPLE)
ADD_LIBRARY(xsocket SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(xsocket PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(xsocket PROPERTIES SUFFIX .so)